add help2man path resolution

--- a/paths.sh.in
+++ b/paths.sh.in
@@ -13,6 +13,7 @@ export libtoolize="@LIBTOOLIZE@"
 export objcopy="@OBJCOPY@"
 export objdump="@OBJDUMP@"
 export readelf="@READELF@"
+export help2man="@HELP2MAN@"
 export patch="@PATCH@"
 export md5sum="@md5sum@"
 export sha1sum="@sha1sum@"
