--- a/ct-ng.in
+++ b/ct-ng.in
@@ -60,6 +60,7 @@ export objcopy      = @OBJCOPY@
 export objdump      = @OBJDUMP@
 export readelf      = @READELF@
 export patch        = @PATCH@
+export help2man     = @HELP2MAN@
 
 # Some distributions (eg. Ubuntu) thought it wise to point /bin/sh to
 # a truly POSIX-conforming shell, ash in this case. This is not so good
