--- a/configure.ac
+++ b/configure.ac
@@ -181,10 +181,8 @@ CTNG_PROG_VERSION_REQ_STRICT([BASH_SHELL],
 
 # We need a awk that *is* GNU awk
 CTNG_PROG_VERSION_REQ_STRICT([AWK],
-    [GNU awk],
     [awk],
-    [gawk awk],
-    [^GNU Awk ])
+    [gawk awk])
 
 # FIXME This checks for tools at the time configure runs. If a tool is later updated
 # to satisfy our version requirement, we still won't be able to see that. Or worse,
