--- a/darwin-build-configs/aarch64-poky-linux/.config
+++ b/darwin-build-configs/aarch64-poky-linux/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# crosstool-NG 1.24.0.880_1cb6aca Configuration
+# crosstool-NG 1.24.0.1109_f90b927_dirty Configuration
 #
 CT_CONFIGURE_has_cxx11=y
 CT_CONFIGURE_has_wget=y
@@ -8,16 +8,19 @@ CT_CONFIGURE_has_curl=y
 CT_CONFIGURE_has_meson=y
 CT_CONFIGURE_has_ninja=y
 CT_CONFIGURE_has_make_3_81_or_newer=y
-CT_CONFIGURE_has_make_4_0_or_newer=y
 CT_CONFIGURE_has_autoconf_2_65_or_newer=y
 CT_CONFIGURE_has_autoreconf_2_65_or_newer=y
 CT_CONFIGURE_has_automake_1_15_or_newer=y
 CT_CONFIGURE_has_python_3_4_or_newer=y
 CT_CONFIGURE_has_python=y
-CT_CONFIGURE_has_dtc=y
 CT_CONFIGURE_has_svn=y
 CT_CONFIGURE_has_git=y
-CT_VERSION="1.24.0.880_1cb6aca"
+CT_CONFIGURE_has_md5sum=y
+CT_CONFIGURE_has_sha1sum=y
+CT_CONFIGURE_has_sha256sum=y
+CT_CONFIGURE_has_sha512sum=y
+CT_CONFIGURE_has_install_with_strip_program=y
+CT_VERSION="1.24.0.1109_f90b927_dirty"
 CT_VCHECK=""
 CT_CONFIG_VERSION_ENV="4"
 CT_CONFIG_VERSION_CURRENT="4"
@@ -68,6 +71,12 @@ CT_CONNECT_TIMEOUT=10
 CT_DOWNLOAD_WGET_OPTIONS="--passive-ftp --tries=3 -nc --progress=dot:binary"
 # CT_ONLY_DOWNLOAD is not set
 # CT_USE_MIRROR is not set
+CT_VERIFY_DOWNLOAD_DIGEST=y
+CT_VERIFY_DOWNLOAD_DIGEST_SHA512=y
+# CT_VERIFY_DOWNLOAD_DIGEST_SHA256 is not set
+# CT_VERIFY_DOWNLOAD_DIGEST_SHA1 is not set
+# CT_VERIFY_DOWNLOAD_DIGEST_MD5 is not set
+CT_VERIFY_DOWNLOAD_DIGEST_ALG="sha512"
 # CT_VERIFY_DOWNLOAD_SIGNATURE is not set
 
 #
@@ -126,6 +135,8 @@ CT_ARCH_ARM=y
 # CT_ARCH_NIOS2 is not set
 # CT_ARCH_POWERPC is not set
 # CT_ARCH_PRU is not set
+# CT_ARCH_RISCV is not set
+# CT_ARCH_RX is not set
 # CT_ARCH_S390 is not set
 # CT_ARCH_SH is not set
 # CT_ARCH_SPARC is not set
@@ -140,9 +151,9 @@ CT_ARCH_ARM_SHOW=y
 # Options for arm
 #
 CT_ARCH_ARM_PKG_KSYM=""
-CT_ALL_ARCH_CHOICES="ALPHA ARC ARM AVR BPF C6X LOONGARCH M68K MICROBLAZE MIPS MOXIE MSP430 NIOS2 PARISC POWERPC PRU RISCV S390 SH SPARC X86 XTENSA"
+CT_ALL_ARCH_CHOICES="ALPHA ARC ARM AVR BPF C6X LM32 LOONGARCH M68K MICROBLAZE MIPS MOXIE MSP430 NIOS2 OPENRISC PARISC POWERPC PRU RISCV RX S390 SH SPARC TRICORE X86 XTENSA"
 CT_ARCH_SUFFIX=""
-CT_OMIT_TARGET_VENDOR=y
+# CT_OMIT_TARGET_VENDOR is not set
 
 #
 # Generic target options
@@ -195,8 +206,11 @@ CT_TOOLCHAIN_BUGURL=""
 #
 # Tuple completion and aliasing
 #
+CT_TARGET_VENDOR="poky"
 CT_TARGET_ALIAS_SED_EXPR=""
 CT_TARGET_ALIAS=""
+CT_TARGET_SKIP_CONFIG_SUB=y
+CT_TARGET_OMIT_LIBC_SUFFIX=y
 
 #
 # Toolchain type
@@ -216,6 +230,7 @@ CT_BUILD_SUFFIX=""
 # Misc options
 #
 # CT_TOOLCHAIN_ENABLE_NLS is not set
+# CT_TOOLCHAIN_CMAKE_TOOLCHAIN_FILE is not set
 # end of Toolchain options
 
 #
@@ -237,6 +252,18 @@ CT_LINUX_PKG_NAME="linux"
 CT_LINUX_SRC_RELEASE=y
 # CT_LINUX_SRC_DEVEL is not set
 CT_LINUX_PATCH_ORDER="global"
+# CT_LINUX_V_6_18 is not set
+# CT_LINUX_V_6_17 is not set
+# CT_LINUX_V_6_16 is not set
+# CT_LINUX_V_6_15 is not set
+# CT_LINUX_V_6_14 is not set
+# CT_LINUX_V_6_13 is not set
+# CT_LINUX_V_6_12 is not set
+# CT_LINUX_V_6_11 is not set
+# CT_LINUX_V_6_10 is not set
+# CT_LINUX_V_6_9 is not set
+# CT_LINUX_V_6_8 is not set
+# CT_LINUX_V_6_7 is not set
 # CT_LINUX_V_6_6 is not set
 # CT_LINUX_V_6_5 is not set
 # CT_LINUX_V_6_4 is not set
@@ -248,31 +275,21 @@ CT_LINUX_PATCH_ORDER="global"
 # CT_LINUX_V_5_18 is not set
 # CT_LINUX_V_5_17 is not set
 # CT_LINUX_V_5_16 is not set
-# CT_LINUX_V_5_15 is not set
+CT_LINUX_V_5_15=y
 # CT_LINUX_V_5_14 is not set
 # CT_LINUX_V_5_13 is not set
 # CT_LINUX_V_5_12 is not set
 # CT_LINUX_V_5_11 is not set
-CT_LINUX_V_5_10=y
+# CT_LINUX_V_5_10 is not set
 # CT_LINUX_V_5_9 is not set
 # CT_LINUX_V_5_8 is not set
 # CT_LINUX_V_5_7 is not set
 # CT_LINUX_V_5_4 is not set
-# CT_LINUX_V_5_3 is not set
-# CT_LINUX_V_5_2 is not set
-# CT_LINUX_V_5_1 is not set
-# CT_LINUX_V_5_0 is not set
 # CT_LINUX_V_4_20 is not set
 # CT_LINUX_V_4_19 is not set
 # CT_LINUX_V_4_18 is not set
-# CT_LINUX_V_4_17 is not set
-# CT_LINUX_V_4_16 is not set
 # CT_LINUX_V_4_15 is not set
 # CT_LINUX_V_4_14 is not set
-# CT_LINUX_V_4_13 is not set
-# CT_LINUX_V_4_12 is not set
-# CT_LINUX_V_4_11 is not set
-# CT_LINUX_V_4_10 is not set
 # CT_LINUX_V_4_9 is not set
 # CT_LINUX_V_4_4 is not set
 # CT_LINUX_V_4_1 is not set
@@ -280,7 +297,7 @@ CT_LINUX_V_5_10=y
 # CT_LINUX_V_3_13 is not set
 # CT_LINUX_V_3_12 is not set
 # CT_LINUX_V_3_10 is not set
-CT_LINUX_VERSION="5.10.200"
+CT_LINUX_VERSION="5.15.197"
 CT_LINUX_MIRRORS="$(CT_Mirrors kernel.org linux ${CT_LINUX_VERSION})"
 CT_LINUX_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_LINUX_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
@@ -288,8 +305,8 @@ CT_LINUX_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_LINUX_SIGNATURE_FORMAT="unpacked/.sign"
 CT_LINUX_5_19_or_older=y
 CT_LINUX_older_than_5_19=y
-CT_LINUX_5_12_or_older=y
-CT_LINUX_older_than_5_12=y
+CT_LINUX_later_than_5_12=y
+CT_LINUX_5_12_or_later=y
 CT_LINUX_later_than_5_5=y
 CT_LINUX_5_5_or_later=y
 CT_LINUX_later_than_5_3=y
@@ -337,6 +354,9 @@ CT_BINUTILS_PKG_NAME="binutils"
 CT_BINUTILS_SRC_RELEASE=y
 # CT_BINUTILS_SRC_DEVEL is not set
 CT_BINUTILS_PATCH_ORDER="global"
+# CT_BINUTILS_V_2_45 is not set
+# CT_BINUTILS_V_2_44 is not set
+# CT_BINUTILS_V_2_43 is not set
 # CT_BINUTILS_V_2_42 is not set
 # CT_BINUTILS_V_2_41 is not set
 # CT_BINUTILS_V_2_40 is not set
@@ -360,6 +380,12 @@ CT_BINUTILS_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_BINUTILS_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_BINUTILS_ARCHIVE_FORMATS=".tar.xz .tar.bz2 .tar.gz"
 CT_BINUTILS_SIGNATURE_FORMAT="packed/.sig"
+CT_BINUTILS_2_45_or_older=y
+CT_BINUTILS_older_than_2_45=y
+CT_BINUTILS_2_44_or_older=y
+CT_BINUTILS_older_than_2_44=y
+CT_BINUTILS_2_41_or_older=y
+CT_BINUTILS_older_than_2_41=y
 CT_BINUTILS_2_39_or_older=y
 CT_BINUTILS_older_than_2_39=y
 CT_BINUTILS_later_than_2_30=y
@@ -373,6 +399,7 @@ CT_BINUTILS_2_26_or_later=y
 # GNU binutils
 #
 CT_BINUTILS_GOLD_SUPPORTS_ARCH=y
+CT_BINUTILS_HAS_GOLD=y
 CT_BINUTILS_GOLD_SUPPORT=y
 CT_BINUTILS_FORCE_LD_BFD_DEFAULT=y
 CT_BINUTILS_LINKER_LD=y
@@ -384,6 +411,7 @@ CT_BINUTILS_RELRO=m
 CT_BINUTILS_DETERMINISTIC_ARCHIVES=y
 CT_BINUTILS_EXTRA_CONFIG_ARRAY=""
 # CT_BINUTILS_FOR_TARGET is not set
+# CT_BINUTILS_GPROFNG is not set
 CT_ALL_BINUTILS_CHOICES="BINUTILS"
 # end of Binary utilities
 
@@ -391,6 +419,7 @@ CT_ALL_BINUTILS_CHOICES="BINUTILS"
 # C-library
 #
 CT_LIBC_GLIBC=y
+# CT_LIBC_MUSL is not set
 # CT_LIBC_UCLIBC_NG is not set
 CT_LIBC="glibc"
 CT_LIBC_CHOICE_KSYM="GLIBC"
@@ -408,7 +437,11 @@ CT_GLIBC_PKG_NAME="glibc"
 CT_GLIBC_SRC_RELEASE=y
 # CT_GLIBC_SRC_DEVEL is not set
 CT_GLIBC_PATCH_ORDER="global"
-# CT_GLIBC_V_2_39 is not set
+# CT_GLIBC_V_2_43 is not set
+# CT_GLIBC_V_2_42 is not set
+# CT_GLIBC_V_2_41 is not set
+# CT_GLIBC_V_2_40 is not set
+CT_GLIBC_V_2_39=y
 # CT_GLIBC_V_2_38 is not set
 # CT_GLIBC_V_2_37 is not set
 # CT_GLIBC_V_2_36 is not set
@@ -416,7 +449,7 @@ CT_GLIBC_PATCH_ORDER="global"
 # CT_GLIBC_V_2_34 is not set
 # CT_GLIBC_V_2_33 is not set
 # CT_GLIBC_V_2_32 is not set
-CT_GLIBC_V_2_31=y
+# CT_GLIBC_V_2_31 is not set
 # CT_GLIBC_V_2_30 is not set
 # CT_GLIBC_V_2_29 is not set
 # CT_GLIBC_V_2_28 is not set
@@ -427,24 +460,30 @@ CT_GLIBC_V_2_31=y
 # CT_GLIBC_V_2_23 is not set
 # CT_GLIBC_V_2_19 is not set
 # CT_GLIBC_V_2_17 is not set
-CT_GLIBC_VERSION="2.31"
+CT_GLIBC_VERSION="2.39"
 CT_GLIBC_MIRRORS="$(CT_Mirrors GNU glibc)"
 CT_GLIBC_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GLIBC_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GLIBC_ARCHIVE_FORMATS=".tar.xz .tar.bz2 .tar.gz"
 CT_GLIBC_SIGNATURE_FORMAT="packed/.sig"
-CT_GLIBC_2_38_or_older=y
-CT_GLIBC_older_than_2_38=y
-CT_GLIBC_2_37_or_older=y
-CT_GLIBC_older_than_2_37=y
-CT_GLIBC_2_36_or_older=y
-CT_GLIBC_older_than_2_36=y
-CT_GLIBC_2_34_or_older=y
-CT_GLIBC_older_than_2_34=y
-CT_GLIBC_2_32_or_older=y
-CT_GLIBC_older_than_2_32=y
+CT_GLIBC_2_43_or_older=y
+CT_GLIBC_older_than_2_43=y
+CT_GLIBC_2_42_or_older=y
+CT_GLIBC_older_than_2_42=y
+CT_GLIBC_2_41_or_older=y
+CT_GLIBC_older_than_2_41=y
+CT_GLIBC_later_than_2_38=y
+CT_GLIBC_2_38_or_later=y
+CT_GLIBC_later_than_2_37=y
+CT_GLIBC_2_37_or_later=y
+CT_GLIBC_later_than_2_36=y
+CT_GLIBC_2_36_or_later=y
+CT_GLIBC_later_than_2_34=y
+CT_GLIBC_2_34_or_later=y
+CT_GLIBC_later_than_2_32=y
+CT_GLIBC_2_32_or_later=y
+CT_GLIBC_later_than_2_31=y
 CT_GLIBC_2_31_or_later=y
-CT_GLIBC_2_31_or_older=y
 CT_GLIBC_later_than_2_30=y
 CT_GLIBC_2_30_or_later=y
 CT_GLIBC_later_than_2_29=y
@@ -472,17 +511,18 @@ CT_GLIBC_DEP_BINUTILS=y
 CT_GLIBC_DEP_GCC=y
 CT_GLIBC_DEP_BISON=y
 CT_GLIBC_DEP_PYTHON=y
+CT_GLIBC_DEP_MAKE_4_0=y
 CT_THREADS="nptl"
 CT_GLIBC_BUILD_SSP=y
 CT_GLIBC_HAS_LIBIDN_ADDON=y
 # CT_GLIBC_USE_LIBIDN_ADDON is not set
 CT_GLIBC_NO_SPARC_V8=y
-CT_GLIBC_HAS_OBSOLETE_RPC=y
+CT_GLIBC_HAS_OBSOLETE_LIBCRYPT=y
 CT_GLIBC_EXTRA_CONFIG_ARRAY=""
 CT_GLIBC_CONFIGPARMS=""
 CT_GLIBC_ENABLE_DEBUG=y
 CT_GLIBC_EXTRA_CFLAGS=""
-CT_GLIBC_ENABLE_OBSOLETE_RPC=y
+# CT_GLIBC_ENABLE_OBSOLETE_LIBCRYPT is not set
 # CT_GLIBC_DISABLE_VERSIONING is not set
 CT_GLIBC_OLDEST_ABI=""
 CT_GLIBC_FORCE_UNWIND=y
@@ -490,12 +530,13 @@ CT_GLIBC_FORCE_UNWIND=y
 # CT_GLIBC_KERNEL_VERSION_NONE is not set
 CT_GLIBC_KERNEL_VERSION_AS_HEADERS=y
 # CT_GLIBC_KERNEL_VERSION_CHOSEN is not set
-CT_GLIBC_MIN_KERNEL="5.10.200"
+CT_GLIBC_MIN_KERNEL="5.15.197"
 CT_GLIBC_SSP_DEFAULT=y
 # CT_GLIBC_SSP_NO is not set
 # CT_GLIBC_SSP_YES is not set
 # CT_GLIBC_SSP_ALL is not set
 # CT_GLIBC_SSP_STRONG is not set
+CT_GLIBC_ENABLE_WERROR=y
 # CT_GLIBC_ENABLE_COMMON_FLAG is not set
 CT_ALL_LIBC_CHOICES="AVR_LIBC GLIBC MINGW_W64 MOXIEBOX MUSL NEWLIB NONE PICOLIBC UCLIBC_NG"
 CT_LIBC_SUPPORT_THREADS_ANY=y
@@ -538,24 +579,30 @@ CT_GCC_PKG_NAME="gcc"
 CT_GCC_SRC_RELEASE=y
 # CT_GCC_SRC_DEVEL is not set
 CT_GCC_PATCH_ORDER="global"
-# CT_GCC_V_13 is not set
+# CT_GCC_V_15 is not set
+# CT_GCC_V_14 is not set
+CT_GCC_V_13=y
 # CT_GCC_V_12 is not set
-CT_GCC_V_11=y
+# CT_GCC_V_11 is not set
 # CT_GCC_V_10 is not set
 # CT_GCC_V_9 is not set
 # CT_GCC_V_8 is not set
 # CT_GCC_V_7 is not set
 # CT_GCC_V_6 is not set
-CT_GCC_VERSION="11.4.0"
+CT_GCC_VERSION="13.4.0"
 CT_GCC_MIRRORS="$(CT_Mirrors GNU gcc/gcc-${CT_GCC_VERSION}) $(CT_Mirrors sourceware gcc/releases/gcc-${CT_GCC_VERSION})"
 CT_GCC_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GCC_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GCC_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_GCC_SIGNATURE_FORMAT=""
-CT_GCC_13_or_older=y
-CT_GCC_older_than_13=y
-CT_GCC_12_or_older=y
-CT_GCC_older_than_12=y
+CT_GCC_15_or_older=y
+CT_GCC_older_than_15=y
+CT_GCC_14_or_older=y
+CT_GCC_older_than_14=y
+CT_GCC_later_than_13=y
+CT_GCC_13_or_later=y
+CT_GCC_later_than_12=y
+CT_GCC_12_or_later=y
 CT_GCC_later_than_11=y
 CT_GCC_11_or_later=y
 CT_GCC_later_than_10=y
@@ -594,6 +641,9 @@ CT_CC_GCC_LTO_ZSTD=m
 #
 # CT_CC_GCC_ENABLE_DEFAULT_PIE is not set
 CT_CC_GCC_ENABLE_TARGET_OPTSPACE=y
+CT_CC_GCC_LIBSTDCXX=m
+# CT_CC_GCC_LIBSTDCXX_HOSTED_DISABLE is not set
+CT_CC_GCC_LIBSTDCXX_TARGET_CXXFLAGS=""
 # CT_CC_GCC_LIBMUDFLAP is not set
 # CT_CC_GCC_LIBGOMP is not set
 # CT_CC_GCC_LIBSSP is not set
@@ -630,6 +680,17 @@ CT_CC_LANG_CXX=y
 # end of C compiler
 
 #
+# Linkers
+#
+
+#
+# BFD enabled in binutils
+#
+# CT_LINKER_MOLD is not set
+CT_ALL_LINKER_CHOICES="MOLD"
+# end of Linkers
+
+#
 # Debug facilities
 #
 # CT_DEBUG_DUMA is not set
@@ -652,6 +713,9 @@ CT_GETTEXT_PKG_NAME="gettext"
 CT_GETTEXT_SRC_RELEASE=y
 # CT_GETTEXT_SRC_DEVEL is not set
 CT_GETTEXT_PATCH_ORDER="global"
+# CT_GETTEXT_V_0_26 is not set
+# CT_GETTEXT_V_0_23_1 is not set
+# CT_GETTEXT_V_0_22_5 is not set
 # CT_GETTEXT_V_0_21 is not set
 CT_GETTEXT_V_0_20_1=y
 # CT_GETTEXT_V_0_19_8_1 is not set
@@ -661,6 +725,8 @@ CT_GETTEXT_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GETTEXT_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GETTEXT_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_GETTEXT_SIGNATURE_FORMAT="packed/.sig"
+CT_GETTEXT_0_23_or_older=y
+CT_GETTEXT_older_than_0_23=y
 CT_GETTEXT_0_21_or_older=y
 CT_GETTEXT_older_than_0_21=y
 CT_COMP_LIBS_GMP=y
@@ -670,6 +736,7 @@ CT_GMP_PKG_NAME="gmp"
 CT_GMP_SRC_RELEASE=y
 # CT_GMP_SRC_DEVEL is not set
 CT_GMP_PATCH_ORDER="global"
+# CT_GMP_V_6_3 is not set
 CT_GMP_V_6_2=y
 # CT_GMP_V_6_1 is not set
 CT_GMP_VERSION="6.2.1"
@@ -678,6 +745,7 @@ CT_GMP_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GMP_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GMP_ARCHIVE_FORMATS=".tar.xz .tar.lz .tar.bz2"
 CT_GMP_SIGNATURE_FORMAT="packed/.sig"
+CT_GMP_EXTRA_CFLAGS=""
 CT_COMP_LIBS_ISL=y
 CT_COMP_LIBS_ISL_PKG_KSYM="ISL"
 CT_ISL_DIR_NAME="isl"
@@ -685,6 +753,7 @@ CT_ISL_PKG_NAME="isl"
 CT_ISL_SRC_RELEASE=y
 # CT_ISL_SRC_DEVEL is not set
 CT_ISL_PATCH_ORDER="global"
+# CT_ISL_V_0_27 is not set
 # CT_ISL_V_0_26 is not set
 # CT_ISL_V_0_25 is not set
 CT_ISL_V_0_24=y
@@ -715,6 +784,7 @@ CT_LIBICONV_PKG_NAME="libiconv"
 CT_LIBICONV_SRC_RELEASE=y
 # CT_LIBICONV_SRC_DEVEL is not set
 CT_LIBICONV_PATCH_ORDER="global"
+# CT_LIBICONV_V_1_18 is not set
 CT_LIBICONV_V_1_16=y
 # CT_LIBICONV_V_1_15 is not set
 CT_LIBICONV_VERSION="1.16"
@@ -737,8 +807,6 @@ CT_MPC_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_MPC_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_MPC_ARCHIVE_FORMATS=".tar.gz"
 CT_MPC_SIGNATURE_FORMAT="packed/.sig"
-CT_MPC_later_than_1_1_0=y
-CT_MPC_1_1_0_or_later=y
 CT_COMP_LIBS_MPFR=y
 CT_COMP_LIBS_MPFR_PKG_KSYM="MPFR"
 CT_MPFR_DIR_NAME="mpfr"
@@ -747,14 +815,12 @@ CT_MPFR_SRC_RELEASE=y
 # CT_MPFR_SRC_DEVEL is not set
 CT_MPFR_PATCH_ORDER="global"
 CT_MPFR_V_4_2=y
-CT_MPFR_VERSION="4.2.1"
+CT_MPFR_VERSION="4.2.2"
 CT_MPFR_MIRRORS="https://www.mpfr.org/mpfr-${CT_MPFR_VERSION} $(CT_Mirrors GNU mpfr)"
 CT_MPFR_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_MPFR_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_MPFR_ARCHIVE_FORMATS=".tar.xz .tar.bz2 .tar.gz .zip"
 CT_MPFR_SIGNATURE_FORMAT="packed/.asc"
-CT_MPFR_later_than_4_0_0=y
-CT_MPFR_4_0_0_or_later=y
 CT_COMP_LIBS_NCURSES=y
 CT_COMP_LIBS_NCURSES_PKG_KSYM="NCURSES"
 CT_NCURSES_DIR_NAME="ncurses"
@@ -762,6 +828,7 @@ CT_NCURSES_PKG_NAME="ncurses"
 CT_NCURSES_SRC_RELEASE=y
 # CT_NCURSES_SRC_DEVEL is not set
 CT_NCURSES_PATCH_ORDER="global"
+# CT_NCURSES_V_6_5 is not set
 # CT_NCURSES_V_6_4 is not set
 CT_NCURSES_V_6_2=y
 # CT_NCURSES_V_6_1 is not set
@@ -771,7 +838,7 @@ CT_NCURSES_MIRRORS="https://invisible-mirror.net/archives/ncurses $(CT_Mirrors G
 CT_NCURSES_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_NCURSES_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_NCURSES_ARCHIVE_FORMATS=".tar.gz"
-CT_NCURSES_SIGNATURE_FORMAT="packed/.sig"
+CT_NCURSES_SIGNATURE_FORMAT="packed/.asc"
 CT_NCURSES_NEW_ABI=y
 CT_NCURSES_HOST_CONFIG_ARGS=""
 CT_NCURSES_HOST_DISABLE_DB=y
@@ -779,6 +846,7 @@ CT_NCURSES_HOST_FALLBACKS="linux,xterm,xterm-color,xterm-256color,vt100"
 CT_NCURSES_TARGET_CONFIG_ARGS=""
 # CT_NCURSES_TARGET_DISABLE_DB is not set
 CT_NCURSES_TARGET_FALLBACKS=""
+CT_NCURSES_EXTRA_CFLAGS=""
 CT_COMP_LIBS_ZLIB=y
 CT_COMP_LIBS_ZLIB_PKG_KSYM="ZLIB"
 CT_ZLIB_DIR_NAME="zlib"
@@ -786,9 +854,9 @@ CT_ZLIB_PKG_NAME="zlib"
 CT_ZLIB_SRC_RELEASE=y
 # CT_ZLIB_SRC_DEVEL is not set
 CT_ZLIB_PATCH_ORDER="global"
-CT_ZLIB_V_1_3=y
+CT_ZLIB_V_1_3_1=y
 # CT_ZLIB_V_1_2_13 is not set
-CT_ZLIB_VERSION="1.3"
+CT_ZLIB_VERSION="1.3.1"
 CT_ZLIB_MIRRORS="https://github.com/madler/zlib/releases/download/v${CT_ZLIB_VERSION} https://www.zlib.net/"
 CT_ZLIB_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_ZLIB_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
@@ -801,10 +869,12 @@ CT_ZSTD_PKG_NAME="zstd"
 CT_ZSTD_SRC_RELEASE=y
 # CT_ZSTD_SRC_DEVEL is not set
 CT_ZSTD_PATCH_ORDER="global"
+# CT_ZSTD_V_1_5_7 is not set
+# CT_ZSTD_V_1_5_6 is not set
 CT_ZSTD_V_1_5_5=y
 # CT_ZSTD_V_1_5_2 is not set
 CT_ZSTD_VERSION="1.5.5"
-CT_ZSTD_MIRRORS="https://github.com/facebook/zstd/releases/download/v${CT_ZSTD_VERSION} https://www.zstd.net/"
+CT_ZSTD_MIRRORS="https://github.com/facebook/zstd/releases/download/v${CT_ZSTD_VERSION} https://downloads.sourceforge.net/project/zstandard.mirror/v${CT_ZSTD_VERSION}"
 CT_ZSTD_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_ZSTD_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_ZSTD_ARCHIVE_FORMATS=".tar.gz"
@@ -843,6 +913,7 @@ CT_BISON_PKG_NAME="bison"
 CT_BISON_SRC_RELEASE=y
 # CT_BISON_SRC_DEVEL is not set
 CT_BISON_PATCH_ORDER="global"
+# CT_BISON_V_3_8 is not set
 CT_BISON_V_3_5=y
 # CT_BISON_V_3_4 is not set
 # CT_BISON_V_3_3 is not set
@@ -865,7 +936,7 @@ CT_M4_SRC_RELEASE=y
 # CT_M4_SRC_DEVEL is not set
 CT_M4_PATCH_ORDER="global"
 CT_M4_V_1_4=y
-CT_M4_VERSION="1.4.19"
+CT_M4_VERSION="1.4.20"
 CT_M4_MIRRORS="$(CT_Mirrors GNU m4)"
 CT_M4_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_M4_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
