--- a/darwin-build-configs/aarch64-poky-linux/.config
+++ b/darwin-build-configs/aarch64-poky-linux/.config
@@ -409,7 +409,7 @@ CT_BINUTILS_LINKER_DEFAULT="bfd"
 # CT_BINUTILS_PLUGINS is not set
 CT_BINUTILS_RELRO=m
 CT_BINUTILS_DETERMINISTIC_ARCHIVES=y
-CT_BINUTILS_EXTRA_CONFIG_ARRAY=""
+CT_BINUTILS_EXTRA_CONFIG_ARRAY="--with-system-zlib"
 # CT_BINUTILS_FOR_TARGET is not set
 # CT_BINUTILS_GPROFNG is not set
 CT_ALL_BINUTILS_CHOICES="BINUTILS"
@@ -624,8 +624,8 @@ CT_GCC_4_9_or_later=y
 CT_GCC_REQUIRE_4_9_or_later=y
 CT_CC_GCC_HAS_LIBMPX=y
 CT_CC_GCC_ENABLE_CXX_FLAGS=""
-CT_CC_GCC_CORE_EXTRA_CONFIG_ARRAY=""
-CT_CC_GCC_EXTRA_CONFIG_ARRAY=""
+CT_CC_GCC_CORE_EXTRA_CONFIG_ARRAY="--with-system-zlib"
+CT_CC_GCC_EXTRA_CONFIG_ARRAY="--with-system-zlib"
 # CT_CC_GCC_SYSTEM_ZLIB is not set
 CT_CC_GCC_CONFIG_TLS=m
 
@@ -913,14 +913,14 @@ CT_BISON_PKG_NAME="bison"
 CT_BISON_SRC_RELEASE=y
 # CT_BISON_SRC_DEVEL is not set
 CT_BISON_PATCH_ORDER="global"
-# CT_BISON_V_3_8 is not set
-CT_BISON_V_3_5=y
+CT_BISON_V_3_8=y
+# CT_BISON_V_3_5 is not set
 # CT_BISON_V_3_4 is not set
 # CT_BISON_V_3_3 is not set
 # CT_BISON_V_3_2 is not set
 # CT_BISON_V_3_1 is not set
 # CT_BISON_V_3_0 is not set
-CT_BISON_VERSION="3.5"
+CT_BISON_VERSION="3.8.2"
 CT_BISON_MIRRORS="$(CT_Mirrors GNU bison)"
 CT_BISON_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_BISON_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
